# parr

./: .clang-format  .clang-format.sh  .gitattributes  .gitmodules  CMake.sh  CMake.tests.sh  CMakeLists.txt  Parser.Tool.hpp  Parser.cpp  Parser.hpp  Rules.hpp  StaticAssert.cpp  prs.code-workspace
.github/: dependabot.yml
.github/workflows/: Build.yml  CodeQL.yml  Test.yml
.old/: parrabnf.cpp
.old/PEGTL/: Parser.State.cpp  SSL.Rules.hpp  SSL.cpp  SSL.hpp
CMake/: ANTLR.cmake  ANTLR.hpp.in  AddTestTarget.cmake  BuildOption.cmake  CTestRunner.cmake
Libs/: .gitignore  CMakeLists.txt
Source/: prs.cpp  prs.hpp
Source/executable/: executable.cpp  executable.hpp  prs-ssl.cpp
Test/: CMakeLists.txt
Test/generic/CommandLine/--file/Error/: DoesNotExist.COMMAND_LINE  Empty.Filename.COMMAND_LINE
Test/parrssl/000/: empty.004.ssl
Test/parrssl/000/CommandLine/: analyze-rules.COMMAND_LINE
Test/parrssl/000/Comment/: ShortText.LongText-Unfinished.Eof.ssl
Test/parrssl/000/Comment/000.Short/: Short.Text.Eof.ssl  Short.Text.Eol.ssl
Test/parrssl/000/Comment/001.Medium/: Medium.Eol.ssl
Test/parrssl/000/Comment/002.Long/: Open.Open.Eol.Close.Eol.ssl  Open.TextEolText.Close.Eof.ssl
Test/parrssl/000/Procedure/: Empty.Packed.ssl  InnerProcedure.ssl  Name.MediumComment.ssl
Test/parrssl/000/Procedure/Arguments/: EmptyArguments-Packed.Eof.ssl  EmptyArguments-Packed.Eol.ssl  Tall.EmptyArguments.Split.ssl
Test/parrssl/000/Procedure/Declaration/: EmptyParens.ssl  Tall.ssl  Valid.ssl
Test/parrssl/000/Procedure/Declaration/Error/: NoSemicolon.ssl
Test/parrssl/000/ProcedureScope/If/: EmptyBlock.ssl
Test/parrssl/000/ProcedureScope/If/Error/: EmptyBlock.NoCondition.ssl  EmptyBlock.NoThen.ssl
Test/parrssl/000/Variable/: Increase.ProcedureScope.ssl  Increase.SpreadedScope.ssl
Test/parrssl/000/Variable/Declaration/: AssignConstant.Colon.ssl  Valid.ssl
Test/parrssl/000/Variable/Declaration/Error/: NoName.ssl
Test/parrssl/000/Variable/Import/: Valid.ssl
Test/prs-ssl/000/: .editorconfig
Test/prs-ssl/000/Comment/: MediumText.ShortText.Eof.ssl  MediumText.ShortText.Eol.ssl
Test/prs-ssl/000/Comment/Error/: MediumText.Error-ShortText.Eof.ssl  MediumText.Error-ShortText.Eol.ssl
Test/prs-ssl/000/Comment/Long/: Open.Open.Eol.Close.Eof.ssl  Open.TextEolText.Close.Eol.ssl
Test/prs-ssl/000/Comment/Medium/: Medium.Eof.ssl
Test/prs-ssl/000/Procedure/: Declaration.Empty.ssl  Empty.Comments.ssl  Empty.Comments2.ssl  Empty.ssl  Tall.ssl
Test/prs-ssl/000/Procedure/Arguments/: EmptyArguments.ssl  Tall.EmptyArguments.Together.ssl
Test/prs-ssl/000/Procedure/Declaration/Error/: NoName.ssl
Test/prs-ssl/000/ProcedureScope/Block/: Empty.MultiLine.ssl  Empty.OneLine.ssl
Test/prs-ssl/000/ProcedureScope/If/: EmptyBlock.ssl
Test/prs-ssl/000/ProcedureScope/If/Error/: EmptyBlock.NoBegin.ssl  EmptyBlock.NoEnd.ssl
Test/prs-ssl/000/Variable/: Valid.ssl
Test/prs-ssl/000/Variable/Declaration/: AssignConstant.NoColon.ssl
Test/prs-ssl/000/Variable/Declaration/Error/: NoSemicolon.ssl
Test/prs-ssl/000/Variable/Error/: Increase.AfterProcedureScope.ssl  Increase.GlobalScope.ssl
Test/prs-ssl/000/Variable/Import/: Comments.ssl
Test/prs-ssl/000/Variable/Import/Error/: Assign.ssl
executable/: parrssl.cpp
grammar/: .gitignore  FalloutScriptLexer.g4  FalloutScriptParser.g4
ssl/: SSL.Rules.hpp  SSL.abnf  SSL.cpp  SSL.hpp
